--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_BestSellerPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_BestSellerPartial.cshtml
@@ -12,25 +12,23 @@
             @if (Model.productMasterList.Count > 0)
             {
 
-                foreach (var items in Model.productMasterList)
+                foreach (var item in Model.productMasterList)
                 {
-                    var defaulImage = Model.ProductFilesList.FirstOrDefault(u => (u.DefaultImage == true) && u.ProductId == items.ProductId)?.FilePath;
-                    var hover = Model.ProductFilesList.FirstOrDefault(u => u.HoverImage == true && u.ProductId == items.ProductId)?.FilePath;
                     <div class="product-layout leftpro">
                         <div class="product-thumb1 transition">
                             <div class="col-xs-12">
-                               
+
                                 <div class="image col-sm-4 col-xs-4">
-                                    <a href="@Url.Action("ProductDetails","Products", new { productId= items.ProductId })"><img src="@(!string.IsNullOrEmpty(defaulImage) ? ViewBag.BaseFilePath + defaulImage :"/UploadedFiles/Products/Products/no-image.png")" alt="@items.Name" title="@items.Name" class="img-responsive center-block" /></a>
+                                    <a href="@Url.Action("ProductDetails","Products", new { productId= item.ProductId })"><img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath + item.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@item.Name" title="@item.Name" class="img-responsive center-block" /></a>
                                     <!-- Smartshop Images Start -->
-                                    <a href="@Url.Action("ProductDetails","Products", new { productId= items.ProductId })"><img src="@(!string.IsNullOrEmpty(hover) ? ViewBag.BaseFilePath + hover:"/UploadedFiles/Products/Products/no-image.png")" class="img-responsive second-img" alt="hover image" /></a>
+                                    <a href="@Url.Action("ProductDetails","Products", new { productId= item.ProductId })"><img src="@(!string.IsNullOrEmpty(item.HoverImage) ? ViewBag.BaseFilePath + item.HoverImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" /></a>
 
                                     <!-- Smartshop Images End -->
                                 </div>
                                 <div class="caption col-sm-8 col-xs-8">
-                                    <h4><a href="@Url.Action("ProductDetails","Products", new { productId= items.ProductId })">@items.Name</a></h4>
+                                    <h4><a href="@Url.Action("ProductDetails","Products", new { productId= item.ProductId })">@item.Name</a></h4>
                                     <p class="price">
-                                        @Model.CurrencySign@items.SellPrice
+                                        @Model.CurrencySign@item.SellPrice
                                     </p>
                                     <div class="rating">
                                         <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
