--- a/WMS/Views/Products/_ProductDocumentsDetails.cshtml
+++ b/WMS/Views/Products/_ProductDocumentsDetails.cshtml
@@ -10,6 +10,7 @@
     settings =>
     {
         settings.Name = "ProductFileDetailGridView" + ViewBag.productid;
+        var gridName = settings.Name;
         settings.KeyFieldName = "Id";
         settings.Width = Unit.Percentage(100);
         settings.CallbackRouteValues = new { Controller = "Products", Action = "_ProductDocumentsDetails", id = ViewBag.productid };
@@ -50,7 +51,7 @@
             {
                 p.MinValue = 0;
                 p.MaxValue = 1000000000;
-                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                p.ClientSideEvents.LostFocus = string.Format("function(s,e){{ OnDetailsChanged(s,e,{0});}}", gridName);
             });
         });
         settings.Columns.Add(column =>
@@ -58,7 +59,7 @@
             column.FieldName = "DefaultImage";
             column.EditorProperties().CheckBox(p =>
             {
-                p.ClientSideEvents.CheckedChanged = "function(s,e){ OnDetailsChanged(s,e);}";
+                p.ClientSideEvents.CheckedChanged = string.Format("function(s,e){{ OnDetailsChanged(s,e,{0});}}", gridName);
             });
         });
         settings.Columns.Add(column =>
@@ -66,7 +67,7 @@
             column.FieldName = "HoverImage";
             column.EditorProperties().CheckBox(p =>
             {
-                p.ClientSideEvents.CheckedChanged = "function(s,e){ OnDetailsChanged(s,e);}";
+                p.ClientSideEvents.CheckedChanged = string.Format("function(s,e){{ OnDetailsChanged(s,e,{0});}}", gridName);
             });
         });
         settings.Columns.Add(column =>
@@ -74,7 +75,7 @@
             column.FieldName = "IsDeleted";
             column.EditorProperties().CheckBox(p =>
             {
-                p.ClientSideEvents.CheckedChanged = "function(s,e){ OnDetailsChanged(s,e);}";
+                p.ClientSideEvents.CheckedChanged = string.Format("function(s,e){{ OnDetailsChanged(s,e,{0});}}", gridName);
             });
         });
 
@@ -87,7 +88,7 @@
             editor.ValidationSettings.Display = Display.None;
         };
 
-        settings.ClientSideEvents.BeginCallback = "function(s,e){ OnBeginGridCallback(s, e); }";
+        settings.ClientSideEvents.BeginCallback = String.Format("function(s,e){{ OnBeginGridCallback(s, e, {0}); }}", gridName);
         settings.ClientSideEvents.FocusedCellChanging = "OnSpecialPricesGridFocusChanged";
-        settings.ClientSideEvents.EndCallback = "OnEndGridCallback";
+        settings.ClientSideEvents.EndCallback = String.Format("function(s,e){{ OnEndGridCallback(s, e, {0}); }}", gridName);
     }).Bind(Model).GetHtml()
