BasePath fix for ECommerce Imported from Changeset 2296

--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <link href="~/Areas/Shop/Content/plugins/magnific-popup/dist/magnific-popup.css" type="text/css" rel="stylesheet" media="screen" />
     @*<link href="/Content/app/css/app.css" rel="stylesheet">*@
     @Scripts.Render("~/bundles/modernizr")
-    <script type="text/javascript"> var basePath = '@ViewBag.BaseFilePath';</script>
+    <script type="text/javascript"> var basePath = '@ViewBag.BasePath';</script>
     <style>
         .see-all {
             line-height: 38px;
