--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
@@ -23,11 +23,11 @@
                                 <div class="col-xs-12 speciaol-col">
                                     <div class="image">
                                         <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i].ProductId })">
-                                            <img src="@(!string.IsNullOrEmpty(@Model.productMasterList[i].DefaultImage)? ViewBag.BaseFilePath + @Model.productMasterList[i].DefaultImage :"/Areas/Shop/Content/app/img/product/no_image.gif")" alt="@Model.productMasterList[i].Name" title="@Model.productMasterList[i].Name" class="img-responsive center-block" />
+                                            <img src="@(!string.IsNullOrEmpty(@Model.productMasterList[i].DefaultImage)? ViewBag.BaseFilePath + @Model.productMasterList[i].DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@Model.productMasterList[i].Name" title="@Model.productMasterList[i].Name" class="img-responsive center-block" />
                                         </a>
                                         <!-- Smartshop Images Start -->
                                         <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i].ProductId })">
-                                            <img src="@(!string.IsNullOrEmpty(@Model.productMasterList[i].HoverImage)? ViewBag.BaseFilePath + @Model.productMasterList[i].HoverImage :"/Areas/Shop/Content/app/img/product/no_image.gif")" class="img-responsive second-img" alt="hover image" />
+                                            <img src="@(!string.IsNullOrEmpty(@Model.productMasterList[i].HoverImage)? ViewBag.BaseFilePath + @Model.productMasterList[i].HoverImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" />
                                         </a>
                                         <!-- Smartshop Images End -->
                                     </div>
@@ -67,9 +67,9 @@
                             <div class="product-thumb1 transition">
                                 <div class="col-xs-12 speciaol-col">
                                     <div class="image">
-                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+1].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].DefaultImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].DefaultImage :ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" alt="@Model.productMasterList[i+1].Name" title="@Model.productMasterList[i+1].Name" class="img-responsive center-block" /></a>
+                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+1].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].DefaultImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].DefaultImage : ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" alt="@Model.productMasterList[i+1].Name" title="@Model.productMasterList[i+1].Name" class="img-responsive center-block" /></a>
                                         <!-- Smartshop Images Start -->
-                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+1].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].HoverImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].HoverImage :ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" /></a>
+                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+1].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].HoverImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].HoverImage : ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" /></a>
                                         <!-- Smartshop Images End -->
                                     </div>
                                     <div class="caption">
@@ -103,9 +103,9 @@
                             <div class="product-thumb1 transition">
                                 <div class="col-xs-12 speciaol-col">
                                     <div class="image">
-                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+2].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].DefaultImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].DefaultImage :ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@Model.productMasterList[i + 2].Name" title="@Model.productMasterList[i + 2].Name" class="img-responsive center-block" /></a>
+                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+2].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].DefaultImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@Model.productMasterList[i + 2].Name" title="@Model.productMasterList[i + 2].Name" class="img-responsive center-block" /></a>
                                         <!-- Smartshop Images Start -->
-                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+2].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].HoverImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].HoverImage :ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" /></a>
+                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+2].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].HoverImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].HoverImage : ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" /></a>
                                         <!-- Smartshop Images End -->
                                     </div>
                                     <div class="caption">
