--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_ImageBlockPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_ImageBlockPartial.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="offerbanner hidden-xs">
+﻿<div class="offerbanner hidden-xs">
     <div class="beffect">
         <a href="#">
             @*<img src="/Areas/Shop/Content/app/img/left-banner.jpg" alt="banner" class="img-responsive" />*@
