Currency conversion issue in product details and categories fixed along with some UI changes made, also fixed the issue of no currency symbol coming up in product details Imported from Changeset 2299

--- a/WarehouseEcommerce/Areas/Shop/Content/bootstrap.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/bootstrap.css
@@ -1433,9 +1433,10 @@ ol ol {
   list-style: none;
 }
 .list-inline {
-  padding-left: 0;
-  list-style: none;
-  margin-left: -5px;
+    padding-left: 0;
+    list-style: none;
+    margin-left: -5px;
+    color: rgb(177, 39, 4);
 }
 .list-inline > li {
   display: inline-block;
