--- a/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
@@ -1134,9 +1134,9 @@ h2.price {
 
 .product-thumb .price-old,
 .product-thumb1 .price-old {
-    color: #929292;
-    text-decoration: line-through;
-    font-size: 12px;
+    color: rgb(177, 39, 4);
+    font-size: 13px;
+    line-height: 1.5 !important;
 }
 
 .product-thumb .price-tax {
@@ -2051,7 +2051,8 @@ header {
 
 .product-thumb .price-old {
     display: block;
-    font-size: 12px;
+    font-size: 14px;
+    word-spacing: 2px
 }
 
 @media(min-width: 992px) {
