Bug fix for total amount and for the hover over cart, images were not coming up have been fixed Imported from Changeset 2300

--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
@@ -84,7 +84,7 @@
         <div class="button-submit proceed-card-btn">
 
             <button type="Submit" name="submitNewsletter" class="btn btn-block" onclick="window.location.href='@Url.Action("GetAddress", "Orders")'">Proceed to Checkout</button>
-            <div class=""><label>Total: @(ViewBag.TotalQty == null ? 0 : ViewBag.TotalQty) </label></div>
+            <div class=""><label>Total: @ViewBag.CurrencySymbol @(ViewBag.TotalQty == null ? 0 : ViewBag.TotalQty) </label></div>
         </div>
     }
     else
