Added a scroll for the cart hover over view Imported from Changeset 2301

--- a/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
@@ -146,6 +146,8 @@ body {
 .dropdown-menu {
     box-shadow: 0 0px 5px rgba(0, 0, 0, .175);
     z-index: 9999;
+    height: 500px;
+    overflow-y: scroll;
 }
 
 .form-control {
